# brother_printer_fwupd

./: .gitignore  .pre-commit-config.yaml  Containerfile  README.md  build.sh  check.sh  pylintrc  pyproject.toml  tox.ini
brother_printer_fwupd/: __init__.py  __main__.py  autodiscover_printer.py  autodiscovery.py  common.py  firmware_downloader.py  firmware_uploader.py  models.py  snmp_info.py  utils.py
simulator/: README.md  pyproject.toml  run.py
simulator/data/: public.snmprec
tests/: test_autodiscovery.py  test_common.py  test_firmware_downloader.py  test_firmware_uploader.py  test_models.py  test_snmp_info.py  test_utils.py
